manifests/news-digest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-digest-ingress
  namespace: news-digest
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dailydoseoftech.org
        - www.dailydoseoftech.org
      secretName: dailydoseoftech-tls
  rules:
    - host: dailydoseoftech.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
    - host: www.dailydoseoftech.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
